--- a/Home.css
+++ b/Home.css
@@ -107,8 +107,8 @@
   .u-section-5-1 .u-shape-1 {
     height: 858px;
     margin-top: 222px;
-    margin-right: initial;
-    margin-left: initial;
+    margin-right: inherit;
+    margin-left: inherit;
     width: auto;
   }
 
@@ -151,8 +151,8 @@
     height: 614px;
     margin-top: 98px;
     width: auto;
-    margin-right: initial;
-    margin-left: initial;
+    margin-right: inherit;
+    margin-left: inherit;
   }
 
   .u-section-5-1 .u-layout-wrap-1 {
@@ -291,8 +291,8 @@
   .u-section-5-2 .u-shape-1 {
     height: 858px;
     margin-top: 222px;
-    margin-right: initial;
-    margin-left: initial;
+    margin-right: inherit;
+    margin-left: inherit;
     width: auto;
   }
 
@@ -335,8 +335,8 @@
     height: 614px;
     margin-top: 98px;
     width: auto;
-    margin-right: initial;
-    margin-left: initial;
+    margin-right: inherit;
+    margin-left: inherit;
   }
 
   .u-section-5-2 .u-layout-wrap-1 {
@@ -476,8 +476,8 @@
   .u-section-5-3 .u-shape-1 {
     height: 858px;
     margin-top: 222px;
-    margin-right: initial;
-    margin-left: initial;
+    margin-right: inherit;
+    margin-left: inherit;
     width: auto;
   }
 
@@ -520,8 +520,8 @@
     height: 614px;
     margin-top: 98px;
     width: auto;
-    margin-right: initial;
-    margin-left: initial;
+    margin-right: inherit;
+    margin-left: inherit;
   }
 
   .u-section-5-3 .u-layout-wrap-1 {
@@ -654,8 +654,8 @@
   .u-section-5-4 .u-shape-1 {
     height: 858px;
     margin-top: 222px;
-    margin-right: initial;
-    margin-left: initial;
+    margin-right: inherit;
+    margin-left: inherit;
     width: auto;
   }
 
@@ -698,8 +698,8 @@
     height: 614px;
     margin-top: 98px;
     width: auto;
-    margin-right: initial;
-    margin-left: initial;
+    margin-right: inherit;
+    margin-left: inherit;
   }
 
   .u-section-5-4 .u-layout-wrap-1 {
@@ -832,8 +832,8 @@
   .u-section-5-5 .u-shape-1 {
     height: 858px;
     margin-top: 222px;
-    margin-right: initial;
-    margin-left: initial;
+    margin-right: inherit;
+    margin-left: inherit;
     width: auto;
   }
 
@@ -876,8 +876,8 @@
     height: 614px;
     margin-top: 98px;
     width: auto;
-    margin-right: initial;
-    margin-left: initial;
+    margin-right: inherit;
+    margin-left: inherit;
   }
 
   .u-section-5-5 .u-layout-wrap-1 {
@@ -1019,8 +1019,8 @@
   .u-section-5-6 .u-shape-1 {
     height: 858px;
     margin-top: 222px;
-    margin-right: initial;
-    margin-left: initial;
+    margin-right: inherit;
+    margin-left: inherit;
     width: auto;
   }
 
@@ -1063,8 +1063,8 @@
     height: 614px;
     margin-top: 98px;
     width: auto;
-    margin-right: initial;
-    margin-left: initial;
+    margin-right: inherit;
+    margin-left: inherit;
   }
 
   .u-section-5-6 .u-layout-wrap-1 {
@@ -1387,8 +1387,8 @@
   }
 
   .u-section-3 .u-image-1 {
-    margin-right: initial;
-    margin-left: initial;
+    margin-right: inherit;
+    margin-left: inherit;
   }
 
   .u-section-3 .u-image-2 {
@@ -1397,8 +1397,8 @@
   }
 
   .u-section-3 .u-image-3 {
-    margin-right: initial;
-    margin-left: initial;
+    margin-right: inherit;
+    margin-left: inherit;
   }
 }
 
@@ -1418,8 +1418,8 @@
 
   .u-section-3 .u-image-1 {
     height: 240px;
-    margin-right: initial;
-    margin-left: initial;
+    margin-right: inherit;
+    margin-left: inherit;
   }
 
   .u-section-3 .u-layout-cell-2 {
@@ -1441,8 +1441,8 @@
 
   .u-section-3 .u-image-3 {
     height: 360px;
-    margin-right: initial;
-    margin-left: initial;
+    margin-right: inherit;
+    margin-left: inherit;
   }
 
   .u-section-3 .u-layout-cell-5 {
@@ -1462,8 +1462,8 @@
 
   .u-section-3 .u-image-1 {
     height: 450px;
-    margin-right: initial;
-    margin-left: initial;
+    margin-right: inherit;
+    margin-left: inherit;
   }
 
   .u-section-3 .u-layout-cell-2 {
@@ -1474,8 +1474,8 @@
     height: 429px;
     margin-top: 0;
     margin-bottom: 0;
-    margin-right: initial;
-    margin-left: initial;
+    margin-right: inherit;
+    margin-left: inherit;
     width: auto;
   }
 
@@ -1490,8 +1490,8 @@
 
   .u-section-3 .u-image-3 {
     height: 540px;
-    margin-right: initial;
-    margin-left: initial;
+    margin-right: inherit;
+    margin-left: inherit;
   }
 
   .u-section-3 .u-container-layout-5 {
@@ -1515,8 +1515,8 @@
 
   .u-section-3 .u-image-1 {
     height: 283px;
-    margin-right: initial;
-    margin-left: initial;
+    margin-right: inherit;
+    margin-left: inherit;
   }
 
   .u-section-3 .u-layout-cell-2 {
@@ -1526,8 +1526,8 @@
   .u-section-3 .u-image-2 {
     height: 270px;
     width: auto;
-    margin-right: initial;
-    margin-left: initial;
+    margin-right: inherit;
+    margin-left: inherit;
   }
 
   .u-section-3 .u-layout-cell-4 {
@@ -1536,8 +1536,8 @@
 
   .u-section-3 .u-image-3 {
     height: 340px;
-    margin-right: initial;
-    margin-left: initial;
+    margin-right: inherit;
+    margin-left: inherit;
   }
 }.u-section-4 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/IMG_0029.JPG");
@@ -1652,8 +1652,8 @@
   }
 
   .u-section-6 .u-layout-wrap-1 {
-    margin-right: initial;
-    margin-left: initial;
+    margin-right: inherit;
+    margin-left: inherit;
   }
 
   .u-section-6 .u-image-1 {
@@ -1697,6 +1697,7 @@
   }
 
   .u-section-6 .u-image-1 {
+    
     min-height: 558px;
   }
 
